
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buf ;
typedef int FILE ;


 int BUFSIZE ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fputc (int,int *) ;
 int fwrite (char*,int,int,int *) ;

int main()
{
      int c;
      char buf[BUFSIZE];

      FILE *fp = fopen("test.wbmp","w");


      c = 0;
      fputc(c,fp);
      fputc(c,fp);


      c = 0x84;
      fputc(c,fp);
      c = 0x80;
      fputc(c,fp);
      fputc(c,fp);
      fputc(c,fp);
      c = 0x01;
      fputc(c,fp);


      c = 0x04;
      fputc(c,fp);


      fwrite(buf,sizeof(buf),1,fp);

      fclose(fp);
}
